# nwordseg

./: CMakeLists.txt  README  nwordseg.py  test.query
demo/: seg_demo.cpp
include/: nwordseg_model.h  nwordseg_util.h
ncrfpp/lib/: libcrfpp.so.0.0.0
nseg_model/: nseg_demo
nseg_model/ncrfpp/lib/: libcrfpp.la
src/: nwordseg_model.cpp  nwordseg_py.cpp  nwordseg_util.cpp
train/: gen_data.sh  scw.test  scw.train  seg2tag.py  test.sh  train.sh  update_model.sh
